--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,3 +27,37 @@ header img {
 header ion-icon {
     font-size: 45px;
 }
+
+footer {
+    background-color: #ffffff;
+    width: 100%;
+    height: 11vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+    box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
+
+footer ion-icon {
+    font-size: 26px;
+}
+
+footer input {
+    border: 0;
+    color: #000000;
+    width: 90%;
+    height: 70%;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+footer input::placeholder {
+    color: #000000;
+    font-style: italic;
+}
