solving code smells #2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,10 @@ nav div span {
     font-weight: 700;
 }
 
-.cinza {
+.statusMsg {
     background-color: #DCDCDC;
+}
+
+.privateMsg {
+    background-color: #FFDEDE;
 }
